fix: text color and alignment

--- a/templates/g5_helium/custom/scss/form.css
+++ b/templates/g5_helium/custom/scss/form.css
@@ -198,7 +198,10 @@
       font-weight: 400;
       font-family: var(--em-applicant-font);
       font-style: normal;
-      display: flex;
+
+      * {
+        color: var(--em-form-tip-color);
+      }
 
       i.icon-question-sign  {
         display: none;
